--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -218,6 +218,9 @@
                     <navigationItem key="navigationItem" title="Contacts" id="mFN-im-4zp">
                         <barButtonItem key="rightBarButtonItem" image="add_contact" id="0M2-jV-uIF">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addContactButtonPressed:" destination="BYZ-38-t0r" id="loJ-Y3-HEy"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <size key="freeformSize" width="375" height="1000"/>
