adding favorite button and delegate

--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                                                                 <rect key="frame" x="20" y="20" width="335" height="537"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <prototypes>
-                                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactCell" id="UGC-zf-s3a" customClass="SwipeTableViewCell" customModule="SwipeCellKit">
+                                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactCell" id="UGC-zf-s3a" customClass="ContactCell" customModule="Contacts" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="28" width="335" height="80"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UGC-zf-s3a" id="gHe-6P-g6H">
