--- a/Contacts/Xibs/ContactXib.xib
+++ b/Contacts/Xibs/ContactXib.xib
@@ -13,26 +13,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactXibView" customModule="Contacts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waleed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yi7-fb-j5j">
-                    <rect key="frame" x="16" y="43.5" width="96" height="33.5"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="28"/>
+                    <rect key="frame" x="16" y="8" width="62" height="21.5"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJb-Mi-WEg">
+                    <rect key="frame" x="32" y="33.5" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUM-Ar-T4G">
+                    <rect key="frame" x="329" y="25" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="qUM-Ar-T4G" secondAttribute="height" multiplier="1:1" id="GD8-xJ-GRO"/>
+                        <constraint firstAttribute="height" constant="30" id="SJq-Z9-4cC"/>
+                    </constraints>
+                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" image="star"/>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BdF-Pk-MRQ">
+                    <rect key="frame" x="20" y="79" width="335" height="1"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="5sR-IL-Mfg"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="BdF-Pk-MRQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="3Ca-CE-H00"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="BdF-Pk-MRQ" secondAttribute="trailing" constant="20" id="4kB-i3-BuU"/>
+                <constraint firstItem="qUM-Ar-T4G" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="GVs-R8-uPV"/>
                 <constraint firstItem="Yi7-fb-j5j" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="HSJ-3X-3iN"/>
-                <constraint firstItem="Yi7-fb-j5j" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Q3v-BZ-3p6"/>
+                <constraint firstItem="Yi7-fb-j5j" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="Pcc-SL-yGz"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qUM-Ar-T4G" secondAttribute="trailing" constant="16" id="eQ7-mx-2TR"/>
+                <constraint firstItem="LJb-Mi-WEg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="kVd-Yc-LcU"/>
+                <constraint firstItem="LJb-Mi-WEg" firstAttribute="top" secondItem="Yi7-fb-j5j" secondAttribute="bottom" constant="4" id="p9p-Ty-zoV"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="BdF-Pk-MRQ" secondAttribute="bottom" id="xuu-wl-VmP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="favoritebutton" destination="qUM-Ar-T4G" id="2YR-Xi-OMk"/>
                 <outlet property="nameLabel" destination="Yi7-fb-j5j" id="3n6-qe-2y8"/>
+                <outlet property="phoneLabel" destination="LJb-Mi-WEg" id="GuQ-OV-h8H"/>
             </connections>
+            <point key="canvasLocation" x="39.200000000000003" y="46.776611694152926"/>
         </view>
     </objects>
+    <resources>
+        <image name="star" width="256" height="256"/>
+    </resources>
 </document>
